# classe

./: .gitignore  README.md  setup.cfg
classE/: class_compare.py  compare.py  cv.py  featurization.py
examples/: tree_shap_analysis.ipynb  tsproj.py
src/classE/: compare.py  cv.py  featurization.py
src/classe/: compare.py  cv.py  featurization.py
