[metadata]
name = classE
version = 0.0.1
author = Aleksander Evren Paetzold Durumeric
author_email = alekepd@gmail.com
description = A small package to compare molecular trajectories using classification.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alekepd/ClassE
project_urls =
    Bug Tracker = https://github.com/alekepd/ClassE/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = classE
packages = find:
python_requires = >=3.9

[options.packages.find]
where = classE
