[metadata]
name = classe
version = 0.0.1
author = Aleksander Evren Paetzold Durumeric
author_email = alekepd@gmail.com
description = A small package to compare molecular trajectories using classification.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alekepd/ClassE
project_urls =
    Bug Tracker = https://github.com/alekepd/ClassE/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    classe
    pandas
    shap
    mdtraj
    lightgbm

[options.extras_require]
cv = 
    numpy
    classe
    pandas
    shap
    mdtraj
    lightgbm
    sklearn
    umap-learn
    joblib

[options.packages.find]
where = src
